# miguel_lib

./: Cargo.toml  README.md  README.rst  miguel_lib.pyi  pyproject.toml  setup.py
.github/workflows/: CI.yml  Lint.yml  Python Lint.yml
docs/: conf.py  index.rst
docs/module/: Interval.rst
miguel_lib/: __init__.py  __init__.pyi  miguel_lib.pyi
src/: interval.rs  lib.rs  misc.rs  span.rs
