[package]
name = "miguel_lib"
version = "0.3.0-beta6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "miguel_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module", "abi3-py37"] }
